tests/baselines/reference/tsxSpreadAttributesResolution2.errors.txt
tests/cases/conformance/jsx/file.tsx(20,10): error TS2739: Type '{}' is missing the following properties from type 'PoisonedProp': x, y
tests/cases/conformance/jsx/file.tsx(21,10): error TS2739: Type '{}' is missing the following properties from type 'PoisonedProp': x, y
tests/cases/conformance/jsx/file.tsx(22,19): error TS2322: Type 'boolean' is not assignable to type 'string'.
tests/cases/conformance/jsx/file.tsx(22,21): error TS2322: Type 'true' is not assignable to type '"2"'.
tests/cases/conformance/jsx/file.tsx(23,19): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsx/file.tsx(24,20): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsx/file.tsx(25,44): error TS2322: Type '{ X: string; x: string; y: "2"; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'.
  Property 'X' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'. Did you mean 'x'?


==== tests/cases/conformance/jsx/file.tsx (7 errors) ====
    import React = require('react');
    
    interface PoisonedProp {
        x: string;
        y: "2";
    }
    
    class Poisoned extends React.Component<PoisonedProp, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    const obj = {};
    
    // OK
    <Poisoned {...{x: "ok", y: "2"}} />;
    
    // Error
    let p = <Poisoned {...obj} />;
             ~~~~~~~~
!!! error TS2739: Type '{}' is missing the following properties from type 'PoisonedProp': x, y
    let y = <Poisoned />;
             ~~~~~~~~
!!! error TS2739: Type '{}' is missing the following properties from type 'PoisonedProp': x, y
    let z = <Poisoned x y/>;
                      ~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:4:5: The expected type comes from property 'x' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'
                        ~
!!! error TS2322: Type 'true' is not assignable to type '"2"'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:5:5: The expected type comes from property 'y' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'
    let w = <Poisoned {...{x: 5, y: "2"}}/>;
                      ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:4:5: The expected type comes from property 'x' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'
    let w1 = <Poisoned {...{x: 5, y: "2"}} X="hi" />;
                       ~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:4:5: The expected type comes from property 'x' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'
    let w2 = <Poisoned {...{x: 'foo', y: "2"}} X="hi" />;
                                               ~
!!! error TS2322: Type '{ X: string; x: string; y: "2"; }' is not assignable to type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'.
!!! error TS2322:   Property 'X' does not exist on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & PoisonedProp & { children?: ReactNode; }'. Did you mean 'x'?